Adding the context

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,8 @@
 version: 2.1
 jobs:
   post_leaves_to_slack:
+    context:
+      - jiva_hr_tools
     docker:
       - image: ruby:3.1.0
     steps:
@@ -16,7 +18,7 @@ workflows:
   daily:
     triggers:
       - schedule:
-          cron: "45 09 * * 1-5"
+          cron: "50 09 * * 1-5"
           filters:
             branches:
               only:
